<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include
        android:id="@+id/header"
        layout="@layout/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/userSearch"
        android:inputType="text"
        style="@style/EditText_Style_Normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="7dp"
        android:paddingStart="30dp"
        android:paddingLeft="30dp"
        android:paddingEnd="30dp"
        android:paddingRight="30dp"
        android:hint="@string/Search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="6dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userSearch">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/floatingActionButtonAdd"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/AddNote"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:icon="@drawable/add"
        app:layout_constraintBottom_toTopOf="@+id/floatingActionButtonRemove"
        app:layout_constraintEnd_toEndOf="@+id/floatingActionButtonOpen" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/floatingActionButtonRemove"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/remove"
        android:text="@string/RemoveNote"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:icon="@drawable/remove"
        app:layout_constraintBottom_toTopOf="@+id/floatingActionButtonOpen"
        app:layout_constraintEnd_toEndOf="@+id/floatingActionButtonAdd" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButtonOpen"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        app:fabCustomSize="60dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="bottom"
        android:src="@drawable/open"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>